[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPCs/Dungeon NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/music/corruption.mp3" type="AudioStream" id=4]
[ext_resource path="res://scripts/GlobalEventManager.gd" type="Script" id=7]
[ext_resource path="res://World.gd" type="Script" id=9]
[ext_resource path="res://scripts/SaveManager.gd" type="Script" id=10]
[ext_resource path="res://sfx/wallHit.wav" type="AudioStream" id=11]
[ext_resource path="res://CommandManager.gd" type="Script" id=14]
[ext_resource path="res://scripts/ScreenShake.gd" type="Script" id=17]
[ext_resource path="res://items/scripts/itemDB.gd" type="Script" id=18]


[node name="Spawn" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": "s"
}

[node name="ItemDB" type="Node" parent="."]
script = ExtResource( 18 )

[node name="SaveManager" type="Node2D" parent="."]
position = Vector2( 160, -32 )
script = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 158, 89 )
acceleration = 650
max_speed = 150

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="GlobalEventManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true

[node name="ScreenShake" type="Node" parent="Camera2D"]
script = ExtResource( 17 )

[node name="Tween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera2D/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera2D/ScreenShake"]

[node name="BulletSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -80.0

[node name="CommandManager" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.611765, 0.611765, 0.611765, 1 )

[node name="Dungeon NPC" parent="." instance=ExtResource( 2 )]
position = Vector2( 214, 104 )

[connection signal="messageEntered" from="GlobalEventManager" to="GlobalEventManager" method="_on_GlobalEventManager_messageEntered"]
[connection signal="messageEntered" from="GlobalEventManager" to="CommandManager" method="_on_GlobalEventManager_messageEntered"]
[connection signal="playerHeal" from="GlobalEventManager" to="Player" method="_on_GlobalEventManager_playerHeal"]
[connection signal="playerHit" from="GlobalEventManager" to="Player" method="_on_GlobalEventManager_playerHit"]
[connection signal="popupText" from="GlobalEventManager" to="GlobalEventManager" method="_on_GlobalEventManager_popupText"]
[connection signal="shake" from="GlobalEventManager" to="Camera2D/ScreenShake" method="_on_GlobalEventManager_shake"]
[connection signal="upgradePickedUp" from="GlobalEventManager" to="Player" method="_on_GlobalEventManager_upgradePickedUp"]
[connection signal="upgradePickedUp" from="GlobalEventManager" to="GlobalEventManager" method="_on_GlobalEventManager_upgradePickedUp"]
[connection signal="timeout" from="Camera2D/ScreenShake/Frequency" to="Camera2D/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShake/Duration" to="Camera2D/ScreenShake" method="_on_Duration_timeout"]
